fixing image sizes on mobile

--- a/wp-content/themes/eyebeam2019/style.scss
+++ b/wp-content/themes/eyebeam2019/style.scss
@@ -1693,9 +1693,9 @@ footer .bottom div {
 	flex: 1 0 100%;
 }
 
-.module.has-image .module-image {
-	flex: 0 0 50%;
-}
+// .module.has-image .module-image {
+// 	flex: 0 0 50%;
+// }
 @media(min-width: 857px){
 	.module .module-image {
 		flex: 1 0 calc(50% - 2rem);
